Record view / Preview tabular data / Update bootstrap-table. try to fix horizontal scroll. comment out useless parts ?. Add list layout.

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -776,13 +776,25 @@ gn-features-tables, .gn-viewer-info-pane {
       width: 100%;
     }
   }
+  .fixed-table-container {
+    height: 200px;
+  }
 }
 
-.gn-md-view gn-features-tables {
-  position: unset;
-  .gn-features-table {
-    border: none;
-    box-shadow: none !important;
+.gn-md-view {
+  gn-features-tables {
+    position: unset;
+    .gn-features-table {
+      border: none;
+      box-shadow: none !important;
+    }
+  }
+  .fixed-table-container {
+    height: 600px;
+  }
+  [data-gn-wfs-filter-facets] .gn-facet-container {
+    overflow: auto;
+    height: 550px;
   }
 }
 
